--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     font-style: normal;
 }
 
-@font-face { 
+/* @font-face { 
 font-family: 'Bender-Bold'; 
 src: url('../fonts/Bender-Bold.eot?#iefix') format('embedded-opentype'), 
 url('../fonts/Bender-Bold.otf') format('opentype'), 
@@ -32,7 +32,7 @@ url('../fonts/Bender-Bold.svg#Bender-Bold') format('svg');
 font-weight: normal; 
 font-style: normal; 
 
-}
+} */
 * {
   box-sizing: border-box;
   &:active, &:hover, &:focus {
@@ -69,7 +69,7 @@ width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-font-family: 'Bender-Bold';
+font-family: Bender-Bold;
 font-weight: normal;
 padding: 10px;
 }
