--- a/css/style.css
+++ b/css/style.css
@@ -22,17 +22,11 @@
     font-style: normal;
 }
 
-/* @font-face { 
-font-family: 'Bender-Bold'; 
-src: url('../fonts/Bender-Bold.eot?#iefix') format('embedded-opentype'), 
-url('../fonts/Bender-Bold.otf') format('opentype'), 
-url('../fonts/Bender-Bold.woff') format('woff'), 
-url('../fonts/Bender-Bold.ttf') format('truetype'), 
-url('../fonts/Bender-Bold.svg#Bender-Bold') format('svg'); 
-font-weight: normal; 
-font-style: normal; 
-
-} */
+@font-face {font-family: 'Bender-Bold';src: url('../fonts/Bender-all/webfonts/37BAF8_3_0.eot');
+  src: url('../fonts/Bender-all/webfonts/37BAF8_3_0.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Bender-all/webfonts/37BAF8_3_0.woff2') format('woff2'),
+  url('../fonts/Bender-all/webfonts/37BAF8_3_0.woff') format('woff'),
+  url('../fonts/Bender-all/webfonts/37BAF8_3_0.ttf') format('truetype');}
 * {
   box-sizing: border-box;
   &:active, &:hover, &:focus {
@@ -69,7 +63,7 @@ width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-font-family: Bender-Bold;
+font-family: 'Bender-Bold';
 font-weight: normal;
 padding: 10px;
 }
